assets/styles/main.scss
@charset 'UTF-8';
/*!
Theme Name: DEPONE Netzgestaltung 2017
Description: Das Theme für die Seite von DEPONE Netzgestaltung.
Version: 2.0
Author: Daniel Ehniss
Author URI: https://depone.de

*/
@import
  'abstracts/variables';

// 1. Vendors
@import
  'vendor/cookieconsent',
  'vendor/normalize',
  'vendor/prism';

// 2. Configuration and helpers
@import
  'abstracts/functions',
  'abstracts/mixins';

// 3. Base stuff
@import
  'base/typography';

// 4. Layout-related sections
// 5. Components
@import
  'components/webmentions';

/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  background-color: $background;
  border-top: rem(5px) solid $brand-color;
  color: $text;
  font-family: "Source Sans Pro Regular",sans-serif;
  font-size: 100%;
  line-height: 1.4;
  padding: 0;
  margin: 0;
  text-rendering: optimizeLegibility;
  -webkit-text-size-adjust: none;

  @include breakpoint($medium) {
    border-top: rem(3px) solid $brand-color;
  }
}

section#page {
  margin: 0 auto;
  overflow: hidden;
  width: 90%;

  @include breakpoint($medium) {
    width: rem(640px);
  }
}

header h1 {
  font-family: "Source Sans Pro Regular", sans-serif;
  font-size: rem(18px);
  font-weight: normal;
  letter-spacing: rem(2px);
  margin: rem(40px) auto rem(30px);
  text-align: center;
  text-transform: uppercase;
  width: rem(250px);

  @include breakpoint($medium) {
    font-size: rem(20px);
    margin: rem(40px) auto;
  }
}

header h1 a,
header h1 a:visited {
  color: $text;
  display: block;
  height: 100%;
  margin: 0;
  opacity: 1;
  text-decoration: none;
  transition: color 0.5s ease-out;
  width: 100%;

  &:hover,
  &:focus {
    color: $brand-color;
  }
}

.no-svg header h1 svg {
  background-image: url('./assets/img/depone.png');
}

header .description {
  @include visually-hidden;
}

nav#mainnav {
  border-top: 1px solid $dark-grey;
  border-bottom: 1px solid $dark-grey;
  display: block;
  font-size: rem(18px);
  left: 0;
  margin: 0 0 rem(48px);
  padding: rem(8px) 0;
  text-align: center;
  top: 0;
  width: 100%;

  @include breakpoint($small) {
    letter-spacing: rem(1px);
  }

  @include breakpoint($medium) {
    font-size: rem(20px);
  }
}

nav#mainnav  ul {
  margin: 0 auto;
  padding: 0;
  width: 100%;
}

nav#mainnav ul li {
  border-radius: $border-radius;
  display: inline-block;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

nav#mainnav ul li a {
  color: $text;
  margin: 0;
  padding: 0 rem(3px);
  text-decoration: none;

  @include breakpoint($medium) {
    padding: 0 rem(5px);
  }
}

nav#mainnav ul li.current_page_item a,
nav#mainnav ul li.current_page_parent a,
nav#mainnav ul li a:hover,
nav#mainnav ul li a:focus {
  color: $brand-color;
}

nav#mainnav ul li ul.children {
  @include visually-hidden;
}

article {
  border-bottom: 1px solid $dark-grey;
  margin: 0 0 rem(48px);
  padding: 0 0 rem(48px);
}

article:last-of-type,
.single article {
  border-bottom: 0;
  // margin: 0 0 rem(56px);
  padding: 0;
}

h2 {
  font-family: "Source Sans Pro Semibold", sans-serif;
  font-size: rem(36px);
  font-weight: normal;
  text-align: center;
  margin: rem(16px) 0;
  padding: 0 ;

  @include breakpoint($medium) {
    font-size: rem(44px);
  }
}

h2 a {
  text-decoration: none;
}

h2.section a {
  color: $text;
  text-decoration: none;
}

h2.start {
  font-size: rem(28px);
}

h3 {
  clear: both;
  font-family: "Source Sans Pro Semibold", sans-serif;
  font-size: rem(32px);
  font-weight: normal;
  margin: rem(16px) 0 rem(8px);
  text-align: center;

  @include breakpoint($medium) {
    margin: rem(32px) 0 rem(16px);
  }
}

h3.archive {
  clear: both;
  text-align: left;
}

h2.comment-count,
h3.comment-reply-title {
  border-bottom: 1px solid $dark-grey;
  font-size: rem(32px);
  margin-top: 0;
  padding: rem(16px) 0;

  @include breakpoint($medium) {
    padding: rem(32px) 0;
  }
}

h3.start {
  display: inline;
  float: left;
  font-size: rem(20px);
  margin: 0;
  padding: 0 $single-space 0 0;
  text-align: left;

  @include breakpoint($medium) {
    font-size: rem(24px);
  }

  &:after {
    content: "–";
    display: inline-block;
    padding-left: $single-space;
  }
}

h3.archive a, h3.start a {
  text-decoration: none;
}

h4 {
  clear: both;
  font-family: "Source Sans Pro Semibold", sans-serif;
  margin: rem(16px) 0 rem(8px);

  @include breakpoint($medium) {
    margin: rem(32px) 0 rem(16px);
  }
}

a,
a:visited {
  color: $brand-color;
  text-decoration: underline;
  transition: color 0.3s ease-out, text-decoration 0.3s ease-out;
}

a:hover,
a:focus {
  color: $text;
  text-decoration: none;
}

a img {
    border: 0;
}

.entry {
  font-size: rem(20px);

  @include breakpoint($medium) {
    font-size: rem(24px);
  }
}

.entry p {
  margin: rem(16px) 0;

  @include breakpoint($medium) {
    margin: rem(24px) 0;
  }
}

.entry > *:first-child {
  margin-top: 0;
}

.entry > *:last-child {
  margin-bottom: 0;
}

.entry img.size-full {
  display: block;
  height: auto;
  width: 100%;
}

img.start {
  display: block;
  height: auto;
  margin: rem(8px) 0 rem(16px);
  width: 100%;
}

.entry img.alignleft,
.entry img.alignright {
  display: block;
  float: none;
  height: auto;
  margin: rem(16px) 0;
  width: 100%;
  max-width: rem(460px);

  @include breakpoint($medium) {
    height: auto;
    width: auto;
  }
}

.entry img.alignleft {
  @include breakpoint($medium) {
    float: left;
    margin: 0 rem(16px) rem(16px) 0;
  }
}
.entry img.alignright {
  @include breakpoint($medium) {
    float: right;
    margin: 0 0 rem(16px) rem(16px);
  }
}

.entry .two.first {
  @include breakpoint($small) {
    float: left;
    display: block;
    padding-bottom: rem(48px);
    width: 49%;
  }
}

.entry .two.second {
  @include breakpoint($small) {
    float: right;
    display: block;
    padding-bottom: rem(48px);
    width: 49%;
  }
}
/* ... */

